# project-b

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DATA.md  Dockerfile  OVERVIEW.md  README.md  TODO.md  app.py  pyproject.toml
api/: __init__.py  data_visualisation.py  limiter.py  menus.py  planner_jobs.py
domains/aligner/: correction.py  service.py
domains/attention/: TAXONOMY.md  correction.py  service.py
domains/exercise/: service.py  strength_formatter.py  strength_service.py
domains/expense/: correction.py  extraction.py  fifo.py  replies.py  repository.py  service.py  types.py
domains/food/: correction.py  service.py
domains/food/nutrition_sources/: classifier.py  off.py  router.py  usda.py
domains/general/: service.py
domains/health_agent/: calibration.py  cards.py  goals.py  goals.yaml  macros.py  plan_command.py
domains/health_agent/meal_planner/: completion.py  persistence.py  prompt.py  render.py  service.py  solver.py
domains/health_agent/run_planner/: fit.py  garmin_upload.py  intervals.py  persistence.py  prompt.py  run.py  service.py  state.py
domains/health_agent/strength_planner/: catalog.py  catalog.yaml  fit.py  garmin_upload.py  persistence.py  planner.py  prompt.py  render.py  service.py  state.py
domains/health_agent/week_planner/: activity_nudge.py  enforce.py  meal_assign.py  persistence.py  planner.py  (+5 more)
domains/location/: service.py
domains/menus/: service.py
domains/query/: service.py
domains/sleep/: correction.py  service.py
domains/weight/: correction.py  service.py
inbound/garmin/: backfill.py  client.py  processor.py
inbound/menus/: AGENTS.md  fitfuel.py  jones.py  models.py  runner.py  wongnai.py  writer.py
inbound/strava/: backfill.py  processor.py  webhook.py
schema/: data_dictionary.md  dump_data_dictionary.py
system/: config.py  conversation_state.py  db.py  internal_auth.py  llm.py  logging.py  messages.py  text.py  timezone.py
telegram/: files.py  normalizer.py  replies.py  router.py  webhook.py
(+5 files in other folders)
