[project]
name = "project-b"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "psycopg2-binary>=2.9",
    "google-genai>=0.7",
    "google-cloud-secret-manager>=2.20",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["telegram*", "domains*", "pulls*", "outbound*", "system*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
