[project]
name = "project-b"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "psycopg2-binary>=2.9",
    "google-genai>=0.7",
    "httpx>=0.27",
    "timezonefinder>=6.5",
    "slowapi>=0.1.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["telegram*", "domains*", "outbound*", "system*", "inbound*", "api*"]
namespaces = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
