[project]
name = "project-b"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "psycopg2-binary>=2.9",
    "PyYAML>=6.0",
    "google-genai>=0.7",
    "httpx>=0.27",
    "timezonefinder>=6.5",
    "slowapi>=0.1.9",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "curl_cffi>=0.7",
    "matplotlib>=3.8",        # day-of strength PNG card (render.py)
    "fit-tool>=0.9.13",       # day-of strength .fit encoding (fit.py)
    "garmin-fit-sdk>=21.141", # .fit validation (fit.py)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["telegram*", "domains*", "outbound*", "system*", "inbound*", "api*"]
namespaces = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
